feat: 웹툰, 웹소설 에피소드 데이터 init
 - 프론트엔드 typescript 적용에 따른 코드 변경

 - 프론트엔드 typescript 적용에 따른 백엔드 코드 변경