@@ -1,12 +1,15 @@
 package com.pageon.backend.config;
 
 import com.opencsv.CSVReader;
+import com.pageon.backend.common.enums.Gender;
 import com.pageon.backend.common.enums.OAuthProvider;
 import com.pageon.backend.common.enums.RoleType;
 import com.pageon.backend.entity.Role;
 import com.pageon.backend.entity.UserRole;
 import com.pageon.backend.entity.User;
 import com.pageon.backend.repository.*;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.ApplicationArguments;
@@ -15,10 +18,13 @@ import org.springframework.context.annotation.Profile;
 import org.springframework.core.annotation.Order;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -34,7 +40,11 @@ public class InitUserData implements ApplicationRunner {
     private final RoleRepository roleRepository;
     private final PasswordEncoder passwordEncoder;
 
+    @PersistenceContext
+    private EntityManager entityManager;
+
     @Override
+    @Transactional
     public void run(ApplicationArguments args) throws Exception {
         initUsers();
 
@@ -50,23 +60,27 @@ public class InitUserData implements ApplicationRunner {
             InputStreamReader inputStreamReader = new InputStreamReader(inputStream, StandardCharsets.UTF_8);
 
             CSVReader csvReader = new CSVReader(inputStreamReader);
-            boolean isFirstLine = true;
 
-            csvReader.readNext();       // 첫 줄 skip
             String [] line;
             while ((line = csvReader.readNext()) != null) {
-                User user = new User(
-                        line[0],
-                        passwordEncoder.encode(line[1]),
-                        line[2],
-                        Integer.valueOf(line[4]),
-                        OAuthProvider.valueOf(line[5]),
-                        Boolean.valueOf(line[7])
-                );
-                List<RoleType> roleTypes = Arrays.stream(line[8].split(","))
+                DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMdd");
+                LocalDate birthDate = LocalDate.parse(line[3], formatter);
+
+                User user = User.builder()
+                        .email(line[0])
+                        .password(passwordEncoder.encode(line[1]))
+                        .nickname(line[2])
+                        .birthDate(birthDate)
+                        .pointBalance(Integer.valueOf(line[4]))
+                        .oAuthProvider(OAuthProvider.EMAIL)
+                        .gender(Gender.valueOf(line[5]))
+                        .termsAgreed(true)
+                        .build();
+
+                List<RoleType> roleTypes = Arrays.stream(line[6].split(","))
                         .map(String::trim)
                         .map(RoleType::valueOf) // 문자열 -> enum
-                        .collect(Collectors.toList());
+                        .toList();
 
                 roleTypes.forEach(roleType -> {
                     Role role = roleRepository.findByRoleType(roleType).orElseThrow(() -> new RuntimeException("role 없음"));
